--- a/app/src/main/res/layout/activity_polarispont.xml
+++ b/app/src/main/res/layout/activity_polarispont.xml
@@ -17,10 +17,7 @@
 
         <TableLayout
             android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
+            android:layout_height="wrap_content"
             android:stretchColumns="*"
             >
 
@@ -77,7 +74,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Szög"
+                    android:text="@string/porlarisz_szog"
                     android:id="@+id/szog"
                     android:layout_column="0" />
 
@@ -89,7 +86,8 @@
                     android:inputType="numberDecimal"
                     android:numeric="integer|decimal"
                     android:autoText="false"
-                    android:layout_weight="1" />
+                    android:layout_weight="1"
+                    android:layout_span="2" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -134,7 +132,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Távolság"
+                    android:text="@string/polaris_tav"
                     android:id="@+id/tav"
                     android:layout_column="0" />
 
@@ -156,7 +154,7 @@
                 <Button
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Számol"
+                    android:text="@string/polaris_szamol"
                     android:id="@+id/button"
                     android:layout_column="0"
                     android:layout_span="7" />
@@ -170,8 +168,8 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="20dp"
-                    android:text="Pont Y :"
+                    android:textSize="20sp"
+                    android:text="@string/polaris_pont_y"
                     android:id="@+id/PY_text"
                     android:layout_column="0"
                     android:visibility="invisible" />
@@ -179,9 +177,8 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Eredmeny"
                     android:id="@+id/PY_eredmeny"
-                    android:textSize="20dp"
+                    android:textSize="20sp"
                     android:layout_column="1"
                     android:visibility="invisible" />
             </TableRow>
@@ -193,8 +190,8 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="20dp"
-                    android:text="Pont X :"
+                    android:textSize="20sp"
+                    android:text="@string/polaris_pont_x"
                     android:id="@+id/PX_text"
                     android:layout_column="0"
                     android:visibility="invisible" />
@@ -202,13 +199,11 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Eredmeny"
                     android:id="@+id/PX_eredmeny"
-                    android:textSize="20dp"
+                    android:textSize="20sp"
                     android:layout_column="1"
                     android:visibility="invisible" />
             </TableRow>
-
         </TableLayout>
     </ScrollView>
 
