--- a/app/src/main/res/menu/menu_haromszog.xml
+++ b/app/src/main/res/menu/menu_haromszog.xml
@@ -1,15 +1,18 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="hu.valamas.hevesitoolbox.szamitas.haromszog/">
-    <item
-        android:id="@+id/action_reset"
+    <item android:id="@+id/action_reset"
+        android:title="@string/menu_vissza"
         android:orderInCategory="100"
-        android:showAsAction="never"
-        android:title="Visszaállítás" />
+        android:showAsAction="never" />
+    <item android:id="@+id/action_info"
+        android:title="@string/menu_sugo"
+        android:orderInCategory="100"
+        android:showAsAction="never" />
     <item
         android:id="@+id/action_rajz"
         android:orderInCategory="100"
         android:showAsAction="never"
-        android:title="Rajzolás" />
+        android:title="@string/munu_rajz" />
 
 </menu>
