--- a/app/src/main/res/menu/menu_polarispont.xml
+++ b/app/src/main/res/menu/menu_polarispont.xml
@@ -2,13 +2,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="hu.valamas.hevesitoolbox.szamolasok.polarispont">
     <item android:id="@+id/action_reset"
-        android:title="Visszaállítás"
+        android:title="@string/menu_vissza"
         android:orderInCategory="100"
         android:showAsAction="never" />
-    <!--
     <item android:id="@+id/action_info"
-        android:title="Ismertető "
+        android:title="@string/menu_sugo"
         android:orderInCategory="100"
-        android:showAsAction="never" /> -->
+        android:showAsAction="never" />
 </menu>
 
