--- a/app/src/main/res/layout/activity_szelveny.xml
+++ b/app/src/main/res/layout/activity_szelveny.xml
@@ -36,7 +36,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/y_in"
-                    android:layout_weight="1" />
+                    android:layout_weight="1"
+                    android:inputType="number|numberSigned|numberDecimal" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -50,7 +51,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/x_in"
-                    android:layout_weight="1" />
+                    android:layout_weight="1"
+                    android:inputType="number|numberSigned|numberDecimal" />
 
             </LinearLayout>
 
@@ -86,8 +88,8 @@
                     android:id="@+id/szelv_fel"
                     android:minWidth="50sp"
                     android:layout_weight="0.30"
-                    android:digits="0123456789-"
-                    android:inputType="number" />
+                    android:inputType="number"
+                    android:focusable="true" />
             </LinearLayout>
 
             <LinearLayout
@@ -99,9 +101,9 @@
                 <EditText
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:digits="0123456789-"
-                    android:id="@+id/szelv_ball"
-                    android:layout_weight="0.33" />
+                    android:id="@+id/szelv_bal"
+                    android:layout_weight="0.33"
+                    android:focusable="false" />
 
                 <EditText
                     android:layout_width="wrap_content"
@@ -110,14 +112,15 @@
                     android:id="@+id/szelv_kozep"
                     android:minWidth="50sp"
                     android:layout_weight="0.33"
-                    android:inputType="number" />
+                    android:inputType="number"
+                    android:maxWidth="50sp" />
 
                 <EditText
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:digits="0123456789-"
                     android:id="@+id/szelv_jobb"
-                    android:layout_weight="0.33" />
+                    android:layout_weight="0.33"
+                    android:focusable="false" />
 
             </LinearLayout>
 
@@ -133,21 +136,8 @@
                     android:layout_height="wrap_content"
                     android:id="@+id/szelv_also"
                     android:minWidth="50sp"
-                    android:layout_weight="0.29" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:orientation="horizontal"
-                android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
-                android:gravity="center"
-                android:weightSum="1">
-
-                <Button
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="New Button"
-                    android:id="@+id/button7" />
+                    android:layout_weight="0.29"
+                    android:focusable="true" />
             </LinearLayout>
 
         </LinearLayout>
