--- a/app/src/main/res/menu/menu_szelveny.xml
+++ b/app/src/main/res/menu/menu_szelveny.xml
@@ -1,6 +1,12 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="hu.valamas.hevesitoolbox.szamolasok.szelveny">
-    <item android:id="@+id/action_settings" android:title="@string/action_settings"
-        android:orderInCategory="100" android:showAsAction="never" />
+    <item android:id="@+id/action_reset"
+        android:title="@string/menu_vissza"
+        android:orderInCategory="100"
+        android:showAsAction="never" />
+    <item android:id="@+id/action_info"
+        android:title="@string/menu_sugo"
+        android:orderInCategory="100"
+        android:showAsAction="never" />
 </menu>
